--- a/NodeJS/src/views/home.ejs
+++ b/NodeJS/src/views/home.ejs
@@ -13,7 +13,8 @@
     <main class="homeMain">
         <div>
             <form action="/products" method="POST" class="formHome">
-                <input type="text" name="search" required placeholder="¿A donde quiere ir?" style="text-align: center;">
+                <input class="" type="text" name="search" required placeholder="¿A donde quiere ir?"
+                    style="text-align: center;">
                 <br>
                 <button type="submit">Buscar</button>
             </form>
