--- a/NodeJS/src/views/partials/footer.ejs
+++ b/NodeJS/src/views/partials/footer.ejs
@@ -1,20 +1,15 @@
 <section>
     <div>
         <i class="fas fa-envelope-open-text"></i>
-        <h3><a href="mailto:info@digitaltravel.com" class="links">Contacto</a></h3>
-        <p>Correo: info@digitaltravel.com</p>
-        <p>Telefono: 5263-9691</p>
+        <h3>Contacto</h3>
+        <p>info@digitaltravel.com</p>
     </div>
     <div>
-        <i class="far fa-address-card"></i>
-        <h3><a href='#' class="links">Sobre Nosotros</a></h3>
-        <p>Enterate un poco de nuestra historia y porque somos lideres en el mercado
-        </p>
+
     </div>
     <div>
         <i class="fab fa-cc-visa"></i>
-        <h3><a href='#' class="links">Formas de Pago</a></h3>
-        <p>Aprovecha los increibles descuentos que tenemos con Visa y Amex
-        </p>
+        <img src="/images/mercadopago.png" width="10%">
+        <h3>Formas de Pago</h3>
     </div>
 </section>
