--- a/NodeJS/src/views/partials/header.ejs
+++ b/NodeJS/src/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark" aria-label="Third navbar example">
-    <div class="container-fluid">
+    <div class="container-fluid barra bg-dark">
         <a href="/"><img src="/images/logoavion.png" alt="Logo Digital Travel" class="logo"></a>
         <a class="navbar-brand title" href="/">Digital Travel</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
@@ -53,4 +53,5 @@
         </div>
 
     </div>
+    <br><br>
 </nav>
