--- a/NodeJS/src/views/products/products.ejs
+++ b/NodeJS/src/views/products/products.ejs
@@ -14,7 +14,8 @@
     <body>
         <div class="products-list">
             <% for( let i=0; i < products.length; i++ ) { %>
-                <article>
+                <br><br>
+                <article style="border-style:solid; border-color:rosybrown; border-radius: 10px;">
                     <section>
                         <img class="imagenofertainicio" src="/images/products/<%= products[i].hotel.image %>"
                             alt="Foto">
@@ -68,7 +69,7 @@
                     </section>
                 </article>
                 <% } %>
-
+                    <br><br><br><br><br><br>
         </div>
     </body>
 </main>
