--- a/NodeJS/src/views/users/admin.ejs
+++ b/NodeJS/src/views/users/admin.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include ("../partials/head") %>
-        <title>Listado de Productos</title>
+        <title>Admin</title>
 </head>
 
 <header>
@@ -17,17 +17,18 @@
             <article>
 
                 <section>
+                    <br><br>
                     <div>
                         <h3>Administrar Productos</h3>
                         <a href="/products/create">
-                            <button type="submit" class="button">Agregar Producto</button>
+                            <button type="submit" class="btn btn-warning">Agregar Producto</button>
                         </a>
                     </div>
                     <div>
                         <br>
                         <h3>Administrar Usuarios</h3>
                         <a href="/admin/users">
-                            <button type="submit" class="button">Listar Usuarios</button>
+                            <button type="submit" class="btn btn-warning">Listar Usuarios</button>
                         </a>
 
                     </div>
