--- a/NodeJS/src/views/users/users.ejs
+++ b/NodeJS/src/views/users/users.ejs
@@ -12,9 +12,10 @@
 <main>
 
     <body>
+        <br><br>
         <div class="products-list">
             <% for( let i=0; i < users.length; i++ ) { %>
-                <article>
+                <article style="border-style:solid; border-color:rosybrown; border-radius: 10px;">
                     <section>
                         <img class="imagenofertainicio" src="/images/users/<%= users[i].image %>" alt="Foto"
                             style="width: 30%">
@@ -74,6 +75,7 @@
                 <% } %>
 
         </div>
+        <br><br><br><br><br><br>
     </body>
 </main>
 <footer>
