--- a/NodeJS/src/views/users/profile.ejs
+++ b/NodeJS/src/views/users/profile.ejs
@@ -14,21 +14,22 @@
     <main>
         <section>
             <form action="/login" method="POST" class="form">
-                <h3>Perfil</h3>
-                <br>
                 <h2>Bienvenido <%= user.firstName %>
                 </h2>
-                <img src="/images/users/<%= user.image %>" alt="Imagen de usuario" style="width: 50%;">
+                <img src="/images/users/<%= user.image %>" alt="Imagen de usuario"
+                    style="width: 30%; border-radius: 200px;">
                 <div>
                     <%= user.email %>
                 </div>
 
             </form>
         </section>
+
     </main>
 
 
     <footer>
+
         <%- include ("../partials/footer") %>
     </footer>
 </body>
